--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap");
 * {
   padding: 0;
-  margin: 0;
-  font-family: "Open Sans", sans-serif; }
+  margin: 0; }
 
 html,
 body {
@@ -11,4 +11,5 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center; }
+  align-items: center;
+  font-family: "Open Sans", sans-serif; }
