--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -7,7 +7,10 @@
   z-index: 100;
   transition: 400ms;
   border-right: 2px solid gray;
-  background-color: white; }
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
   .sideBar__header {
     display: flex;
     justify-content: space-between;
@@ -20,6 +23,69 @@
       width: 50px;
       margin-right: 5px;
       margin-top: 5px; }
+  .sideBar__main {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around; }
+    .sideBar__main__tier {
+      font-size: 2rem; }
+    .sideBar__main-infoWrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      width: 100%;
+      height: 40%; }
+    .sideBar__main__img {
+      width: 10rem; }
+    .sideBar__main__upgrade {
+      transition: 200ms;
+      font-family: "Balsamiq Sans", cursive;
+      width: 7.5rem;
+      height: 3.5rem;
+      border: none;
+      border-radius: 10px;
+      background-color: gold;
+      font-size: 1.5rem;
+      color: gray;
+      cursor: pointer; }
+      .sideBar__main__upgrade:hover {
+        transition: 200ms;
+        background-color: #fce045;
+        color: #4b4b4b; }
+      .sideBar__main__upgrade-price {
+        font-size: 1.2rem; }
+      .sideBar__main__upgrade-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        height: 50%;
+        width: 100%; }
+  .sideBar__bottom {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .sideBar__bottom__remove {
+      transition: 200ms;
+      font-family: "Balsamiq Sans", cursive;
+      width: 7.5rem;
+      height: 3.5rem;
+      border: none;
+      border-radius: 10px;
+      background-color: #d43232;
+      font-size: 1.5rem;
+      color: #cecece;
+      cursor: pointer; }
+      .sideBar__bottom__remove:hover {
+        transition: 200ms;
+        background-color: #d35151;
+        color: #979696; }
 
 .closed {
   transition: 400ms;
