--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -1,10 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap");
 
 * {
   padding: 0;
   margin: 0;
-
-  font-family: "Open Sans", sans-serif;
 }
 
 html,
@@ -16,4 +15,6 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+
+  font-family: "Open Sans", sans-serif;
 }
