--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -98,3 +98,23 @@
   cursor: pointer;
   padding: 20px;
 }
+
+.play-container {
+  position: absolute;
+
+  top: 5rem;
+  right: 2rem;
+  background-color: gray;
+  width: 10rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 10px;
+
+  &__btn {
+    width: 5rem;
+    cursor: pointer;
+  }
+}
