--- a/public/css/enemy.css
+++ b/public/css/enemy.css
@@ -3,7 +3,10 @@
   width: 50%;
   height: 50%;
   border-radius: 20px;
-  box-shadow: -2px -1px 5px 3px #c22828; }
+  box-shadow: -2px -1px 5px 3px #c22828;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .enemy-1 {
   background-color: #15b615;
@@ -29,3 +32,12 @@
   background-color: white;
   width: 70%;
   height: 70%; }
+
+.health-bar {
+  width: 100%;
+  height: 30px;
+  background-color: blue; }
+  .health-bar__progress {
+    width: 100%;
+    height: 30px;
+    background-color: purple; }
