--- a/public/scss/enemy.scss
+++ b/public/scss/enemy.scss
@@ -4,6 +4,10 @@
   height: 50%;
   border-radius: 20px;
   box-shadow: -2px -1px 5px 3px rgb(194, 40, 40);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .enemy-1 {
@@ -34,4 +38,16 @@
   background-color: rgb(255, 255, 255);
   width: 70%;
   height: 70%;
+}
+
+.health-bar {
+  width: 100%;
+  height: 30px;
+  background-color: blue;
+
+  &__progress {
+    width: 100%;
+    height: 30px;
+    background-color: purple;
+  }
 }
